# aoc_2023

./: .gitignore  README.md  aoc.cabal
app/: run.hs
src/: Common.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs
