cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Cooper Campbell
maintainer:         cooper.campbell104@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  build-depends:
    base ^>=4.17,

  ghc-options:
    -O2
    -dynamic

  default-language: Haskell2010

library
  import: shared-properties
  exposed-modules:
    Common,
    Day1,
    Day2,
    Day3,
    Day4

  build-depends:
    text ^>= 2.1,
    base ^>=4.17,
    containers

  hs-source-dirs:   src
  default-language: Haskell2010

executable aoc
  import: shared-properties
  main-is: run.hs

  build-depends:
    aoc
    
  hs-source-dirs:   app
